--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,10 @@
     transform: rotate(360deg);
   }
 }
+
+.background-bar {
+  background: #1B1C1D;
+  height: 340px;
+  margin-top: 64px;
+  margin-bottom: 0;
+}
